add aploud image service notes
